--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,11 @@
   <link rel="apple-touch-icon" href="assets/img/appicon.png">
 
   <link rel="manifest" href="manifest.json">
+  <style>
+    ion-header ion-toolbar:first-of-type {
+      padding-top: 0px !important;
+    }
+  </style>
 </head>
 
 <body>
